--- a/data/index.html
+++ b/data/index.html
@@ -29,7 +29,7 @@
         <div class="titles">
             <h2>Tablero de Datos</h2>
         </div>
-        <section id="data_section" onload="alarm()">
+        <section id="data_section">
             <div class="row">
                 <div class="col-xs-3">
                     <div class="box">Parámetros</div>
